--- a/index.html
+++ b/index.html
@@ -187,6 +187,6 @@
 
     <!-- Load Bot AI first, then main game -->
     <script src="bot-ai.js"></script>
-    <script src="game-updated.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
