--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-            <!-- NEW: Bot Management Controls -->
+            <!-- Bot Management Controls -->
             <div class="bot-controls">
                 <button id="add-bot-btn" class="btn btn-secondary" style="display: none;">
                     🤖 Add Bot
@@ -170,15 +170,15 @@
 
     <!-- Firebase Configuration -->
     <script>
-        // Replace with your Firebase config
+        
         const firebaseConfig = {
-            apiKey: "your-api-key",
-            authDomain: "your-project.firebaseapp.com",
-            databaseURL: "https://your-project-default-rtdb.firebaseio.com/",
-            projectId: "your-project-id",
-            storageBucket: "your-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "your-app-id"
+            apiKey: "AIzaSyC8dd1dr3ONL0idGOwzyzZ5plCjTG2vLEI",                   
+            authDomain: "kaataq-game.firebaseapp.com",           
+            databaseURL: "https://kaataq-game-default-rtdb.firebaseio.com/",  
+            projectId: "kaataq-game",                              
+            storageBucket: "kaataq-game.appspot.com",              
+            messagingSenderId: "602351160973",  
+            appId: "1:602351160973:web:c15a4831c5a7d56d149cc4"                    
         };
 
         // Initialize Firebase
